[gd_scene load_steps=14 format=3 uid="uid://cwpg4ek85x3n4"]

[ext_resource type="Script" uid="uid://cbyqfvacuxfnb" path="res://Scripts/menu.gd" id="1_1rerr"]
[ext_resource type="Script" uid="uid://biocs0b60fi5q" path="res://Scripts/skin_change.gd" id="2_cayip"]
[ext_resource type="Texture2D" uid="uid://d4maagkcya53p" path="res://Assets/Textures/p_idle.png" id="3_cayip"]

[sub_resource type="AtlasTexture" id="AtlasTexture_158mb"]
atlas = ExtResource("3_cayip")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwsa2"]
atlas = ExtResource("3_cayip")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsrd8"]
atlas = ExtResource("3_cayip")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbdvm"]
atlas = ExtResource("3_cayip")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3rjx"]
atlas = ExtResource("3_cayip")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6swd7"]
atlas = ExtResource("3_cayip")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qvly"]
atlas = ExtResource("3_cayip")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfqti"]
atlas = ExtResource("3_cayip")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8i7c"]
atlas = ExtResource("3_cayip")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xhh6f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_158mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwsa2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsrd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbdvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3rjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6swd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qvly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfqti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8i7c")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1rerr")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 248.0
offset_top = 40.0
offset_right = 286.0
offset_bottom = 71.0
text = "Join
"

[node name="ip" type="TextEdit" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 232.0
offset_bottom = 80.0
placeholder_text = "IP Adsress"

[node name="Get_servers" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 113.0
offset_right = 104.0
offset_bottom = 144.0
text = "Get servers"

[node name="browser_timer" type="Timer" parent="."]

[node name="ServerBrowser" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 273.0
offset_top = 72.0
offset_right = 875.0
offset_bottom = 587.0

[node name="ScrollContainer" type="ScrollContainer" parent="ServerBrowser"]
layout_mode = 0
offset_right = 601.0
offset_bottom = 514.0

[node name="VBoxContainer" type="VBoxContainer" parent="ServerBrowser/ScrollContainer"]
layout_mode = 2

[node name="SkinChange" type="Camera2D" parent="."]
position = Vector2(1857, 324)
enabled = false
script = ExtResource("2_cayip")

[node name="Preview" type="AnimatedSprite2D" parent="SkinChange"]
self_modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(-2.00003, -121)
scale = Vector2(3.96875, 3.96875)
sprite_frames = SubResource("SpriteFrames_xhh6f")
autoplay = "default"
frame = 4
frame_progress = 0.387106

[node name="R" type="HSlider" parent="SkinChange"]
offset_left = -441.0
offset_right = 446.0
offset_bottom = 16.0
max_value = 1.0
step = 0.005

[node name="G" type="HSlider" parent="SkinChange"]
offset_left = -441.0
offset_top = 33.0
offset_right = 446.0
offset_bottom = 49.0
max_value = 1.0
step = 0.005

[node name="B" type="HSlider" parent="SkinChange"]
offset_left = -441.0
offset_top = 64.0
offset_right = 446.0
offset_bottom = 80.0
max_value = 1.0
step = 0.005

[node name="JoinServer" type="Button" parent="SkinChange"]
offset_left = -21.0
offset_top = 154.0
offset_right = 17.0
offset_bottom = 185.0
text = "Join"

[node name="Back" type="Button" parent="SkinChange"]
offset_left = -25.0
offset_top = 206.0
offset_right = 20.0
offset_bottom = 237.0
text = "Back"

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Get_servers" to="." method="_on_get_servers_pressed"]
[connection signal="timeout" from="browser_timer" to="." method="_on_browser_timer_timeout"]
[connection signal="value_changed" from="SkinChange/R" to="SkinChange" method="_on_r_value_changed"]
[connection signal="value_changed" from="SkinChange/G" to="SkinChange" method="_on_g_value_changed"]
[connection signal="value_changed" from="SkinChange/B" to="SkinChange" method="_on_b_value_changed"]
[connection signal="pressed" from="SkinChange/JoinServer" to="." method="_on_join_server_pressed"]
[connection signal="pressed" from="SkinChange/JoinServer" to="SkinChange" method="_on_join_server_pressed"]
[connection signal="pressed" from="SkinChange/Back" to="." method="_on_back_pressed"]
